# trawls

./: .gitignore  README.md  not_covered_tags.txt  package-lock.json  package.json  vue.config.js
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test-on-pr.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  cmd.rs  errors.rs  fileinfo.rs  frontend.rs  image.rs  main.rs  processing.rs
src-tauri/src/processing/: cli_progress.rs  dng_writing.rs  image.rs  status.rs
src/components/: FrameRow.vue  ImagePreview.vue  ImageSelection.vue  ManageProcessing.vue  Preview.vue  StepDescription.vue  WarningCard.vue
