[package]
name = "trawls"
version = "0.4.1"
description = "Trawls - RAW based startrail processing"
authors = [ "Christopher Schmidt" ]
license = ""
repository = "https://github.com/trawls-app/trawls"
default-run = "trawls"
edition = "2018"
build = "src/build.rs"

[dependencies]
anyhow = "1.0.69"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = {version = "1.1.3",features = ["api-all", "updater"] }
chrono = { version = "0.4", features = [ "serde" ] }
arrayvec = "0.7.2"
num = "0.4.0"
num_cpus = "1.15.0"
rayon = "1.6.1"
rawler = { git = "https://github.com/trawls-app/dnglab" }
tempfile = "3.2.0"
base64 = "0.20.0"
itertools = "0.10.5"
version = "3.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
clap = { version = "4.1.1", features = ["derive"] }
indicatif = "0.17.3"
image = "0.24.5"
uuid = "1.3.0"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[[bin]]
name = "trawls"
path = "src/main.rs"
